--- a/CodeBook.rmd
+++ b/CodeBook.rmd
@@ -85,6 +85,17 @@ load using R command:
 activities <- read.table(activity_file, col.names=c("id", "name"))
 activities
 ```
+
+```{r}
+
+##   id               name
+## 1  1            WALKING
+## 2  2   WALKING_UPSTAIRS
+## 3  3 WALKING_DOWNSTAIRS
+## 4  4            SITTING
+## 5  5           STANDING
+## 6  6             LAYING
+```
 descriptive name to the activity in the data set. there are 6 activities. 
 
 ```{r}
@@ -122,6 +133,76 @@ selected_feature_names <- gsub("BodyBody", "Body", selected_feature_names)
 selected_feature_names <- tolower(selected_feature_names)
 names(extracted_data)<- selected_feature_names
 names(extracted_data)
+```
+```{r}
+##  [1] "body-acceleration-mean-x-time"                  
+##  [2] "body-acceleration-mean-y-time"                  
+##  [3] "body-acceleration-mean-z-time"                  
+##  [4] "body-acceleration-std-x-time"                   
+##  [5] "body-acceleration-std-y-time"                   
+##  [6] "body-acceleration-std-z-time"                   
+##  [7] "gravity-acceleration-mean-x-time"               
+##  [8] "gravity-acceleration-mean-y-time"               
+##  [9] "gravity-acceleration-mean-z-time"               
+## [10] "gravity-acceleration-std-x-time"                
+## [11] "gravity-acceleration-std-y-time"                
+## [12] "gravity-acceleration-std-z-time"                
+## [13] "body-acceleration-jerk-mean-x-time"             
+## [14] "body-acceleration-jerk-mean-y-time"             
+## [15] "body-acceleration-jerk-mean-z-time"             
+## [16] "body-acceleration-jerk-std-x-time"              
+## [17] "body-acceleration-jerk-std-y-time"              
+## [18] "body-acceleration-jerk-std-z-time"              
+## [19] "body-gyro-mean-x-time"                          
+## [20] "body-gyro-mean-y-time"                          
+## [21] "body-gyro-mean-z-time"                          
+## [22] "body-gyro-std-x-time"                           
+## [23] "body-gyro-std-y-time"                           
+## [24] "body-gyro-std-z-time"                           
+## [25] "body-gyro-jerk-mean-x-time"                     
+## [26] "body-gyro-jerk-mean-y-time"                     
+## [27] "body-gyro-jerk-mean-z-time"                     
+## [28] "body-gyro-jerk-std-x-time"                      
+## [29] "body-gyro-jerk-std-y-time"                      
+## [30] "body-gyro-jerk-std-z-time"                      
+## [31] "body-acceleration-magnitude-mean-time"          
+## [32] "body-acceleration-magnitude-std-time"           
+## [33] "gravity-acceleration-magnitude-mean-time"       
+## [34] "gravity-acceleration-magnitude-std-time"        
+## [35] "body-acceleration-jerk-magnitude-mean-time"     
+## [36] "body-acceleration-jerk-magnitude-std-time"      
+## [37] "body-gyro-magnitude-mean-time"                  
+## [38] "body-gyro-magnitude-std-time"                   
+## [39] "body-gyro-jerk-magnitude-mean-time"             
+## [40] "body-gyro-jerk-magnitude-std-time"              
+## [41] "body-acceleration-mean-x-frequency"             
+## [42] "body-acceleration-mean-y-frequency"             
+## [43] "body-acceleration-mean-z-frequency"             
+## [44] "body-acceleration-std-x-frequency"              
+## [45] "body-acceleration-std-y-frequency"              
+## [46] "body-acceleration-std-z-frequency"              
+## [47] "body-acceleration-jerk-mean-x-frequency"        
+## [48] "body-acceleration-jerk-mean-y-frequency"        
+## [49] "body-acceleration-jerk-mean-z-frequency"        
+## [50] "body-acceleration-jerk-std-x-frequency"         
+## [51] "body-acceleration-jerk-std-y-frequency"         
+## [52] "body-acceleration-jerk-std-z-frequency"         
+## [53] "body-gyro-mean-x-frequency"                     
+## [54] "body-gyro-mean-y-frequency"                     
+## [55] "body-gyro-mean-z-frequency"                     
+## [56] "body-gyro-std-x-frequency"                      
+## [57] "body-gyro-std-y-frequency"                      
+## [58] "body-gyro-std-z-frequency"                      
+## [59] "body-acceleration-magnitude-mean-frequency"     
+## [60] "body-acceleration-magnitude-std-frequency"      
+## [61] "body-acceleration-jerk-magnitude-mean-frequency"
+## [62] "body-acceleration-jerk-magnitude-std-frequency" 
+## [63] "body-gyro-magnitude-mean-frequency"             
+## [64] "body-gyro-magnitude-std-frequency"              
+## [65] "body-gyro-jerk-magnitude-mean-frequency"        
+## [66] "body-gyro-jerk-magnitude-std-frequency"         
+## [67] "subject"                                        
+## [68] "activity"
 ```
 
 ###Step5:From the data set in step 4, creates a second, independent tidy data set with the average 
